--- a/Restaurant.html
+++ b/Restaurant.html
@@ -12,7 +12,7 @@ git<!DOCTYPE html>
             grid-template-rows: 0fr 2fr 0.4fr;
             gap: 5px;
             background-color: #e5e5e5;
-            width: 100%;
+            width: 100%;m
             height: 100%;
         }
         .header {
